<resources>
    <string name="app_name">Nice UserForm</string>
    <string name="Login">LOGIN</string>
    <string name="Register">REGISTER</string>
    <string name="ForgotPassword">FORGOT PASSWORD?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birth">Birth Date</string>
    <string name="gender">Gender Pronouns</string>
    <string name="terms">Accept Terms and conditions</string>
    <string name="welcome">WELCOME</string>

</resources>