<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/primaryDarkColor"
        android:textSize="28sp"/>
    <Button
        android:id="@+id/home_login"
        android:text="@string/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        />
    <Button
        android:id="@+id/home_register"
        android:text="@string/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        />




</LinearLayout>