<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <TextView
        android:text="@string/Login"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/primaryDarkColor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
     />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.4">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_log_user"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_username"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:id="@+id/til_log_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="8dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/login_login"
            android:text="@string/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="4dp"
            />

        <Button
            android:id="@+id/login_register"
            android:text="@string/Register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ForgotPassword"
            android:layout_margin="4dp"
            android:textSize="14sp"
            />


    </LinearLayout>



</LinearLayout>